--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.7.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "expo": "^48.0.0",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.18.0",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-safe-area-context": "4.5.0",
@@ -20,7 +22,9 @@
     "react-uuid": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro": "^0.76.0",
+    "metro-core": "^0.76.0"
   },
   "private": true
 }
